This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

++++++++++++++++++++++++++++++++
++   VersionX 2.1.1-pl        ++
++   Released on 2015-05-15   ++
++++++++++++++++++++++++++++++++
- #65 Make sure Versions tab shows up on snippets
- #67 Some slight improvements to the UI in 2.3
- #73 Fix resource type combo, prevent annoying "unknown column 'name' in 'order clause'" error.
- Improve loading of VersionX service in plugin
- Add Danish translation (thanks Jacob & Dennis at Better Collective!)
- #59 Fix E_NOTICE issue in PHP < 5.4

++++++++++++++++++++++++++++++++
++   VersionX 2.1.0-pl        ++
++   Released on 2013-01-14   ++
++++++++++++++++++++++++++++++++
#52 Prevent cutting off content because of non-breaking spaces.
#42 Revert objects from the grid (both tabs and component)
Add ability to revert Template Variables.
Add ability to revert Plugins.
Add ability to revert Snippets.
Add ability to revert Templates.
Add ability to revert Chunks.
#45 Implement tab states for easier back-and-forth in the component.
#43 Improve setup process performance by using getIterator instead of getCollection.
#44 Fix htmlentities() charset error.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-pl        ++
++   Released on 2012-10-29   ++
++++++++++++++++++++++++++++++++
#39 Add Swedish translation (thanks fractalwolfe!)
#33, #34 Fix issue with multi byte (UTF-8) sequences returning empty content.
#36 Fix ID clashes in component.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc4       ++
++   Released on 2012-07-19   ++
++++++++++++++++++++++++++++++++
Fix critical issue on Firefox (possibly others too) affecting TVs.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc3       ++
++   Released on 2012-07-08   ++
++++++++++++++++++++++++++++++++
Add Plugins UI to the component and as tab on the plugin update panel.