@@ -1,5 +1,7 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+- #78 Fix critical issue where you could not save a resource properly
+
 ++++++++++++++++++++++++++++++++
 ++   VersionX 2.1.1-pl        ++
 ++   Released on 2015-05-15   ++
